@@ -7,6 +7,7 @@ Changelog: August 3, 2014
 = CSS =
 * Improved aesthetics of Post Password form display
 * Make sure Twitter embeds are not fixed width
+* Update `gallery-caption` class to better handle high quantity column displays
 
 = Miscellaneous =
 * Update copyright to 2014
